--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "``` npm install webpack -g ```",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "./node_modules/.bin/napa"
   },
   "repository": {
     "type": "git",
@@ -17,13 +17,24 @@
   },
   "homepage": "https://github.com/shprink/angularjs-ionic-webpack-boilerplate",
   "devDependencies": {
+    "angular": "^1.3.0",
+    "angular-animate": "^1.3.0",
+    "angular-sanitize": "^1.3.0",
+    "angular-ui-router": "^0.2.11",
     "connect-livereload": "^0.5.0",
+    "express": "^4.9.7",
     "gulp": "^3.8.8",
     "gulp-if": "^1.2.5",
     "gulp-livereload": "^2.1.1",
     "gulp-minify-html": "^0.1.6",
+    "gulp-task-listing": "^0.3.0",
+    "gulp-util": "^3.0.1",
     "gulp-webpack": "^1.0.0",
     "minimist": "^1.1.0",
+    "napa": "^1.0.1",
     "webpack": "^1.4.6"
+  },
+  "napa": {
+    "ionic": "driftyco/ionic#v1.0.0-beta.13"
   }
 }
