--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "``` npm install webpack -g ```",
   "main": "index.html",
-  "scripts": {
-    "install": "./node_modules/.bin/napa"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/shprink/angularjs-ionic-webpack-boilerplate.git"
@@ -17,10 +14,10 @@
   },
   "homepage": "https://github.com/shprink/angularjs-ionic-webpack-boilerplate",
   "devDependencies": {
-    "angular": "^1.3.0",
-    "angular-animate": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-ui-router": "^0.2.11",
+    "angular": "1.2.26",
+    "angular-animate": "1.2.26",
+    "angular-sanitize": "1.2.26",
+    "angular-ui-router": "^0.2.10",
     "connect-livereload": "^0.5.0",
     "express": "^4.9.7",
     "gulp": "^3.8.8",
@@ -30,11 +27,9 @@
     "gulp-task-listing": "^0.3.0",
     "gulp-util": "^3.0.1",
     "gulp-webpack": "^1.0.0",
+    "html-webpack-plugin": "^1.1.0",
     "minimist": "^1.1.0",
     "napa": "^1.0.1",
     "webpack": "^1.4.6"
-  },
-  "napa": {
-    "ionic": "driftyco/ionic#v1.0.0-beta.13"
   }
 }
