--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "angular-sanitize": "1.2.26",
     "angular-ui-router": "^0.2.10",
     "connect-livereload": "^0.5.0",
+    "css-loader": "^0.9.0",
+    "del": "^0.1.3",
+    "exports-loader": "^0.6.2",
     "express": "^4.9.7",
+    "file-loader": "^0.8.1",
     "gulp": "^3.8.8",
     "gulp-if": "^1.2.5",
     "gulp-livereload": "^2.1.1",
@@ -27,9 +31,14 @@
     "gulp-task-listing": "^0.3.0",
     "gulp-util": "^3.0.1",
     "gulp-webpack": "^1.0.0",
+    "html-loader": "^0.2.3",
     "html-webpack-plugin": "^1.1.0",
     "minimist": "^1.1.0",
     "napa": "^1.0.1",
+    "open": "0.0.5",
+    "sass-loader": "^0.2.0",
+    "style-loader": "^0.8.1",
+    "url-loader": "^0.5.5",
     "webpack": "^1.4.6"
   }
 }
